--- a/Homework3/Homework3.Tests/Homework3.Tests.csproj
+++ b/Homework3/Homework3.Tests/Homework3.Tests.csproj
@@ -6,6 +6,8 @@
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
         <IsPackable>false</IsPackable>
+        <NoWarn>$(NoWarn);SA1633</NoWarn>
+        <NoWarn>$(NoWarn);SA0001</NoWarn>
     </PropertyGroup>
 
     <ItemGroup>
